--- a/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/Lasergroup/App_Data/Localization/it-IT/orchard.theme.po
@@ -345,6 +345,10 @@ msgid "Add attachment"
 msgstr "Aggiungi allegato"
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
+msgid "By clicking \"SEND\" I declare that I have read and understood "
+msgstr "Cliccando su \"Invia\" dichiaro di avere letto e compreso"
+
+msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Comments or Inquiry"
 msgstr "Commenti o richieste"
 
@@ -403,6 +407,10 @@ msgstr "Carica file"
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml"
 msgid "Your Name"
 msgstr "Il tuo Nome"
+
+msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml"
+msgid "By clicking \"SEND\" I declare that I have read and understood "
+msgstr "Cliccando su \"Invia\" dichiaro di avere letto e compreso"
 
 msgctxt "~/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml"
 msgid "Comments or Inquiry"
