--- a/src/Modules/Laser.Orchard.MailCommunication/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.MailCommunication/App_Data/Localization/it-IT/orchard.module.po
@@ -92,6 +92,10 @@ msgctxt "~/Modules/Laser.Orchard.MailCommunication/Views/EditorTemplates/Parts/M
 msgid "UNSUBSCRIPTION"
 msgstr "REVOCA DEL SERVIZIO"
 
+msgctxt "~/Modules/Laser.Orchard.MailCommunication/Views/EditorTemplates/Parts/MailCommunicationSettings.cshtml"
+msgid "You can use this placeholder \"[UNSUBSCRIBE]\" in order to render the unsubscription link in your template."
+msgstr "E' possibile utilizzare li segnaposto \"[UNSUBSCRIBE]\" per inserire nel template il link per revocare la propria iscrizione."
+
 msgctxt "~/Modules/Laser.Orchard.MailCommunication/Views/EditorTemplates/Parts/MailerSiteSettings.cshtml"
 msgid "FTP host"
 msgstr "Host FTP"
@@ -255,4 +259,12 @@ msgstr "Seleziona nelle impostazioni il template per rimozione e-mail"
 msgctxt "Laser.Orchard.MailCommunication.Services.MailUnsubscribeService"
 msgid "Unsubscribe impossible. Please try again."
 msgstr "Rimozione non eseguita. Si prega di riprovare."
+
+msgctxt "Laser.Orchard.MailCommunication.Services.MissingSettingsBanner"
+msgid "The <a href=\"{0}\">Mail Communication</a> settings need to be configured."
+msgstr "Le impostazioni per <a href=\"{0}\">Mail Communication</a> devono essere configurate."
+
+msgctxt "Laser.Orchard.MailCommunication.Services.MissingSettingsBanner"
+msgid "The <a href=\"{0}\">Mailer</a> settings need to be configured."
+msgstr "Le impostazioni per il <a href=\"{0}\">Mailer</a> devono essere configurate."
 
