--- a/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
@@ -237,6 +237,10 @@ msgid "A valid currency is required. You may find a list of valid currencies in 
 msgstr "È richiesta una valuta valida. L'oggetto Data di questa risposta contiene una lista di valute valide."
 
 msgctxt "Laser.Orchard.PaymentGateway.Controllers.PaymentGatewayAPIController"
+msgid "Could not find a POS called \"{0}\": you may find a list of available POS names in this response's data object."
+msgstr "Impossibile trovare un POS chiamato \"{0}\": puoi trovare un elenco di POS utilizzabili nell'oggetto dati di questa riposta."
+
+msgctxt "Laser.Orchard.PaymentGateway.Controllers.PaymentGatewayAPIController"
 msgid "The Data object contains the array of valid filter parameters. These are case-insensitive."
 msgstr "L'oggetto Data di questa risposta contiene l'elenco dei parametri validi per il filtro. Questi non sono case-sensitive."
 
