--- a/src/Modules/Laser.Orchard.Policy/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Policy/App_Data/Localization/it-IT/orchard.module.po
@@ -69,6 +69,14 @@ msgid "Policy part behaviour"
 msgstr "Comportamento part informativa"
 
 msgctxt "~/Modules/Laser.Orchard.Policy/Views/EditorTemplates/Parts/PolicyTextInfo_Edit.cshtml"
+msgid "For the \"Policy\", \"CommercialUse\" and \"ThirdParty\" options an Accept/Don't Accept choice will be proposed to the end user."
+msgstr "Per le opzioni \"Policy\", \"CommercialUse\" e \"ThirdParty\" verrà proposta all'utente la scelta Accetto/Non accetto."
+
+msgctxt "~/Modules/Laser.Orchard.Policy/Views/EditorTemplates/Parts/PolicyTextInfo_Edit.cshtml"
+msgid "For the \"Regulation\" option a \"I have read the regulation\" flag will be proposed to the end user."
+msgstr "Per l'opzione \"Regulation\" verrà proposta all'utente la casella di spunta \"Ho letto l'informativa\"."
+
+msgctxt "~/Modules/Laser.Orchard.Policy/Views/EditorTemplates/Parts/PolicyTextInfo_Edit.cshtml"
 msgid "Policy type"
 msgstr "Tipo di informativa"
 
