fixed a couple of labels in sharelink settings

--- a/src/Modules/Laser.Orchard.ShareLink/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.ShareLink/App_Data/Localization/it-IT/orchard.module.po
@@ -29,6 +29,10 @@ msgid "Enable user to select a Text"
 msgstr "Consenti all'utente la selezione di un testo"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
+msgid "Enable user to select a Text to share"
+msgstr "Consenti all'utente la selezione di un testo da condividere"
+
+msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
 msgid "Link"
 msgstr "Link"
 
@@ -67,6 +71,10 @@ msgstr "Testo"
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
 msgid "Text to Share"
 msgstr "Testo da Condividere"
+
+msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
+msgid "Used only for Open Graph - Text to Share"
+msgstr "Usato solo per Open Graph - Testo da condividere"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
 msgid "User only for Open Graph - Text to Share"
